# 2025-DataVenture

./: .gitignore  3D.txt  ExampleQuestion.csv  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start-all.bat  stop-all.bat  task.md  task.txt  기능설명.txt
.cursor/plans/: ----------------bcaf7328.plan.md
.cursor/rules/: projectrules.mdc  task.mdc
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  test-backend-ai.yml  test-backend-core.yml  test-frontend.yml
app-web/: .env.example  Dockerfile  Dockerfile.dev  FORCE_REFRESH.md  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
app-web-demo/: DEMO_GUIDE.md  README.md  START_DEMO.md  next.config.js  package-lock.json  package.json  start-demo.bat  tailwind.config.ts  데모_실행_방법.txt  역할전환_기능_안내.md
app-web-demo/src/app/: globals.css  layout.tsx  page.tsx
app-web-demo/src/data/: mockData.ts
app-web-demo/src/lib/: utils.ts
app-web-demo/src/stores/: role-store.ts
app-web/public/: .gitkeep  clear-storage.html
app-web/public/avatars/: README.md
docs/: API.md  DEPLOYMENT.md  PROJECT_BLUEPRINT.md  TESTING_GUIDE.md
service-ai/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  check-health.py  main.py  requirements.txt  start.bat  start.sh
service-ai/app/: __init__.py  main.py
service-core/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  jest.config.js  package-lock.json  package.json
service-core/prisma/: schema.prisma
service-core/src/: index.ts
service-core/tests/: .gitkeep  auth.test.ts
(+152 files in other folders)
